Add details of first array to JS

--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <html>
   <head>
     <title>Cat Paws Competition</title>
+    <script
+      src="https://kit.fontawesome.com/f4a331251b.js"
+      crossorigin="anonymous"
+    ></script>
+    <link href="styles.css" rel="stylesheet" />
   </head>
 
   <body>
     <header>
-      <img />
-      <img />
-      <img />
+      <i class="cat-color fa-solid fa-3x fa-cat"></i>
+      <i class="paw-color fa-solid fa-3x fa-paw"></i>
+      <i class="comment-color fa-solid fa-3x fa-comments"></i>
     </header>
 
     <main id="main-section">
@@ -17,8 +22,11 @@
     </main>
 
     <footer>
-      <img />
-      <img />
+      <i class="fa-brands fa-gratipay"></i>
+      <i class="fa-solid fa-poop"></i>
     </footer>
   </body>
+  <script src="./index.js">
+    type="module"
+  </script>
 </html>
