Styles icons in the footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
       src="https://kit.fontawesome.com/f4a331251b.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link href="styles.css" rel="stylesheet" />
   </head>
 
@@ -22,8 +29,8 @@
     </main>
 
     <footer>
-      <i class="fa-brands fa-gratipay"></i>
-      <i class="fa-solid fa-poop"></i>
+      <i class="heart-icon fa-brands fa-gratipay"></i>
+      <i class="poop-icon fa-solid fa-poop"></i>
     </footer>
   </body>
   <script src="./index.js">
